--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: EnFoid
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/Enfoid/enfoid.github.io/blob/master/static/Artwork/E.png
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: enfoid
   instagram:
   linkedin:
   pinterest:
