maximizing productivity and returns on unqiue projects

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: EnFoid
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: maximizing productivity on unqiue projects
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/Enfoid/enfoid.github.io/master/static/Artwork/E.png
